fix: починил сборку gradle + обновил gradlew + исправил ошибку с